package OOAD_LAB.treeView.bookmarkTree.decorator;

public interface ILabelProvider {
    public String getLabel(Object o);

    public Integer getSomeInfo(Object o);
}
