@startuml
'https://plantuml.com/class-diagram
title 装饰器模式类图

interface ILabelProvider{
    getLabel(Object)
    getSomeInfo(Object)
}


class BookmarkLabelProvider{
    getLabel(Object)
    getSomeInfo(Object)
}

class BookmarkStarDecorator{
    ILabelProvider labelProvider
    getLabel(Object)
    getSomeInfo(Object)
}

class BookmarkReadCountDecorator{
    ILabelProvider labelProvider
    getLabel(Object)
    getSomeInfo(Object)
}

'实现
ILabelProvider <|.. BookmarkStarDecorator
ILabelProvider <|.. BookmarkReadCountDecorator
ILabelProvider <|.. BookmarkLabelProvider

'关联
BookmarkStarDecorator "1" o--> "1" ILabelProvider
BookmarkReadCountDecorator "1" o--> "1" ILabelProvider

@enduml
